No longer need to invalidate all of a foreignObject when there's an invalidate inside of it.  (Bug 418063)  r=jwatt